--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ header {
 }
 .logo {
   color: var(--text-color);
-  font-family: Oleo Script;
+  font-family: Raleway;
   font-size: 26px;
   font-style: normal;
   font-weight: 400;
@@ -51,6 +51,13 @@ header {
 
 .nav-link {
   color: var(--text-color);
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+  text-align: left;
 }
 
 .nav-link:focus,
@@ -201,7 +208,7 @@ footer {
 }
 .logo-white {
   color: var(--text-hero);
-  font-family: Oleo Script;
+  font-family: Raleway;
   font-size: 26px;
   font-style: normal;
   font-weight: 400;
